<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/dashboardLayout"
    tools:context=".fragment.DashboardFragment">

    <RelativeLayout
        android:id="@+id/homeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtcurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="#d50000"
            android:textSize="22sp"
            android:text="@string/marqueeText"
            android:textStyle="bold"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textAlignment="center"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardToken"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/txtcurrent"
            android:backgroundTint="#ffe57f"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:src="@drawable/token1"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token"
                android:padding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="90dp"
                android:layout_gravity="center_horizontal"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTest"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/cardToken"
            android:backgroundTint="#dadada"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/test"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="Medical Test" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:padding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMedicines"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/cardTest"
            android:backgroundTint="#e6ee9c"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:src="@drawable/med3bg5"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines"
                android:padding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAppoint"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/txtcurrent"
            android:layout_toEndOf="@id/cardToken"
            android:backgroundTint="@color/appointColor"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >
            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:src="@drawable/appoint3"
                android:layout_marginTop="0dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardReport"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/cardAppoint"
            android:layout_toEndOf="@id/cardTest"
            android:backgroundTint="#c7beb5"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/report4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:padding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBilling"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/cardReport"
            android:layout_toEndOf="@id/cardMedicines"
            android:backgroundTint="#64ffda"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:elevation="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/bill1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing"
                android:padding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>



</RelativeLayout>